test/mutation_analysis/s0387_first_unique_character_in_a_string/hafis/ablation_o3_full/mutants/2/result.txt
./test/mutation_analysis/s0387_first_unique_character_in_a_string/hafis/ablation_o3_full/mutants/2/Solution.java:20: error: unreachable statement
        if (ans == Integer.MAX_VALUE) {
        ^
1 error
